# crazytra

./: .env.example  .gitignore  ARCHITECTURE.md  BRIDGE_LAYER_SOLUTION.md  CLEANUP_SUMMARY.md  COMMIT_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  GIT_GUIDE.md  INSTALLATION.md  LOGGING_SPEC.md  MIGRATION_SUMMARY.md  MIRRORQUANT_RENAME.md  Makefile  NAUTILUS_DEVELOPMENT_INDEX.md  NT_TO_MQ_BRIDGE.md  POLYMARKET_CORRECTED_PLAN.md  POLYMARKET_DEPLOYMENT_COMPLETE.md  POLYMARKET_DEPLOYMENT_GUIDE.md  POLYMARKET_FINAL_PLAN.md  POLYMARKET_MIGRATION_SUMMARY.md  POLYMARKET_NEXT_STEPS.md  POLYMARKET_PROGRESS_SUMMARY.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  QUICK_REF.md  QUICK_START.md  README.md  RENAME_SUMMARY.md  ROADMAP.md  SYSTEM_SPEC.md  TASK_PROMPTS.md  TODAY_SUMMARY.md  UBUNTU_MIGRATION_CHECKLIST.md  UBUNTU_MIGRATION_GUIDE.md  architecture_demo.py  debug_rust_parsing.py  docker-compose.simple.yml  docker-compose.yml  mq_tick_schema.json  (+17 more)
api-gateway/: Dockerfile  README.md  go.mod
api-gateway/handlers/: polymarket.go
api-gateway/src/: main.go
api-gateway/websocket/: server.go
data-layer/: Cargo.toml
data-layer/src/: main.rs
data-layer/src/buffer/: mod.rs
data-layer/src/bus/: mod.rs  redis_bus.rs
data-layer/src/connector/: binance.rs  mod.rs  polymarket.rs
data-layer/src/transport/: mod.rs
docs/: BACKTEST_AND_DATA_STRATEGY.md  COMPETITIVE_ANALYSIS.md  DOCKER_SETUP_WINDOWS.md  MULTI_TENANT_ARCHITECTURE.md  POLYMARKET_INTEGRATION_GUIDE.md  SESSION_SUMMARY.md  STOCK_EXCHANGES_SUPPORT.md  TENANT_SUBSCRIPTION_SYSTEM.md
examples/: polymarket_e2e_test.go
frontend/: .env.example  Dockerfile  QUICKSTART.md  README.md  index.html  nginx.conf  package-lock.json  package.json  setup.ps1  setup.sh
frontend/docs/: WEBSOCKET.md
frontend/src/: App.tsx  index.css  main.tsx
infra/: docker-compose.yml
llm-layer/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh
llm-layer/llm_layer/: main.py
nautilus-core/: .env.example  Dockerfile  QUICKSTART.md  README.md  TESTING.md  __init__.py  build_rust.py  config.py  main.py  polymarket_data_service.py  requirements.txt
nautilus-core/rust/: Cargo.toml
nautilus-core/rust/src/: data_polymarket.rs  lib.rs  models.rs
risk-engine/: go.mod
scripts/: git_commit.ps1  git_commit.sh
strategy-layer/: pyproject.toml
strategy-layer/strategy_layer/: __init__.py  base.py  combinator.py  main.py  registry.py  runner.py
strategy-layer/strategy_layer/backtest/: engine.py
strategy-layer/strategy_layer/strategies/: ma_cross.py  mean_reversion.py
telegram-bot/: Dockerfile  NLP_GUIDE.md  QUICKSTART.md  README.md  go.mod  go.sum  main.go  nlp_handler.go
trading-layer/: go.mod
(+68 files in other folders)
