[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-layer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "redis[asyncio]>=5.0",
    "pydantic>=2.5",
    "tenacity>=8.2",
    "structlog>=23.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_layer*"]
